--- a/.github/workflows/deno_deploy.yml
+++ b/.github/workflows/deno_deploy.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: wechat-article-exporter
+          project: hebdoc-wechat-arti-29
           entrypoint: server/index.ts
           root: .output
